[gd_scene load_steps=6 format=3 uid="uid://d3sqcb7pdhx"]

[ext_resource type="Script" uid="uid://b2ix1cbfni6ji" path="res://scripts/ui/cards/hand_manager.gd" id="1_hand"]
[ext_resource type="PackedScene" uid="uid://cdfq4te1du" path="res://scenes/ui/cards/Card.tscn" id="2_card"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_energy"]
bg_color = Color(0.2, 0.4, 0.8, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.9, 0.9, 0.9, 0.8)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_deck"]
bg_color = Color(0.2, 0.6, 0.3, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.9, 0.9, 0.9, 0.8)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_discard"]
bg_color = Color(0.6, 0.3, 0.2, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.9, 0.9, 0.9, 0.8)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="HandUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_hand")
card_scene = ExtResource("2_card")

[node name="HandContainer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 100.0
offset_top = -200.0
offset_right = -100.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2

[node name="EnergyPanel" type="Panel" parent="."]
custom_minimum_size = Vector2(80, 40)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -100.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 60.0
grow_horizontal = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_energy")

[node name="Label" type="Label" parent="EnergyPanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -25.0
offset_right = 25.0
offset_bottom = 20.0
grow_horizontal = 2
text = "ENERGY"
horizontal_alignment = 1

[node name="EnergyLabel" type="Label" parent="EnergyPanel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -25.0
offset_top = -25.0
offset_right = 25.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 16
text = "3/3"
horizontal_alignment = 1

[node name="DeckPanel" type="Panel" parent="."]
custom_minimum_size = Vector2(60, 70)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -90.0
offset_right = 80.0
offset_bottom = -20.0
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_deck")

[node name="Label" type="Label" parent="DeckPanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 12
text = "DECK"
horizontal_alignment = 1

[node name="CountLabel" type="Label" parent="DeckPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -13.0
offset_right = 20.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 20
text = "12"
horizontal_alignment = 1

[node name="DiscardPanel" type="Panel" parent="."]
custom_minimum_size = Vector2(60, 70)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -80.0
offset_top = -90.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 0
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_discard")

[node name="Label" type="Label" parent="DiscardPanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -30.0
offset_right = 30.0
offset_bottom = 20.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 12
text = "DISCARD"
horizontal_alignment = 1

[node name="CountLabel" type="Label" parent="DiscardPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -13.0
offset_right = 20.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 20
text = "0"
horizontal_alignment = 1

[node name="EndTurnButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -120.0
offset_top = -150.0
offset_right = -20.0
offset_bottom = -110.0
grow_horizontal = 0
grow_vertical = 0
text = "END TURN"
